Worked on Arrays problem 9 and working on Linked List problem 1 and Traffic Control problem